Add recipe page content

--- a/recipes/penne.html
+++ b/recipes/penne.html
@@ -2,10 +2,47 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Penne</title>
+    <title>Simple Penne Recipe</title>
 </head>
 <body>
-    <h1>Penne</h1>
+    <h1>Penne With a Tomato and Basil Sauce</h1>
+
+    <img src="../images/tomato-basil-penne-photo.jpeg" alt="Finished Penne Pasta Dish" height="384" width="384">
+    <h3>Penne dish with the beautiful tomato basil sauce</h3>
+
+    <p>This penne pasta is a Mediterranean-style family staple. Use 2 tablespoons olive oil if basil oil is unavailable.</p>
+    
+    <p>This dish should take around 45 minutes total to complete with about a 20 minute prep time. The serving size for this reciple is 4 people so there'll be enough delicious pasta for the whole family!</p>
+
+    <h2>Ingredients</h2>
+        <ul>
+            <li>1 (8 ounce) package penne pasta</li>
+            <li>1 tablespoon basil oil</li>
+            <li>1 tablespoon olive oil</li>
+            <li>3 cloves garlic, minced</li>
+            <li>1 pint grape tomatoes, halved</li>
+            <li>1 cup shredded pepper Jack cheese</li>
+            <li>1 cup shredded mozzarella cheese</li>
+            <li>¼ cup grated Parmesan cheese</li>
+            <li>1 tablespoon minced fresh basil</li>
+        </ul>
+    
+    <h2>Steps</h2>
+    <h3>Cook the Pasta</h3>
+    <ol>
+        <li>Bring a large pot of water to a rolling boil over high heat.</li>
+        <li>Cook pasta in boiling water until cooked through but still firm to the bite, about 10 minutes.</li>
+        <li>Drain and set aside.</li>
+    </ol>
+    <h3>Make the sauce</h3>
+    <ol>
+        <li>Heat both oils in a large skillet over medium-high heat. </li>
+        <li>Add garlic and cook until soft, 1 to 2 minutes.</li>
+        <li>Add tomatoes, reduce heat to medium, and simmer for 10 minutes.</li>
+        <li>Stir in pepper Jack, mozzarella, and Parmesan cheese</li>
+        <li>When cheese begins to melt, mix in cooked penne pasta.</li>
+        <li>Season with fresh basil and serve!</li>
+    </ol>
+
 </body>
 </html>
