--- a/index.html
+++ b/index.html
@@ -7,6 +7,9 @@
 <body>
     <h1>Odin Recipes</h1>
 
-    <a href="recipes/penne.html">Penne</a>
+    <ul>
+    <li><a href="recipes/penne.html">Penne</a></li>
+    <li><a href="recipes/steak.html">Steak</a></li>
+
 </body>
 </html>
