Create stylesheet and add link to html files

--- a/recipes/penne.html
+++ b/recipes/penne.html
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <title>Simple Penne Recipe</title>
+    <link rel="stylesheet" href="./style.css">
 </head>
 <body>
     <h1>Penne With a Tomato and Basil Sauce</h1>
